# defold-binary-packer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  game.project
binarypacker/: annotations.lua  ext.manifest
binarypacker/src/: binarypacker.cpp  binarypacker.h  parsers.cpp  structs.cpp  writers.cpp
example/: example.script  structs.json
